[gd_scene load_steps=7 format=3 uid="uid://bqqnmayb2s48f"]

[ext_resource type="Script" uid="uid://cg70qtxbrq1ox" path="res://src/blocks/prep_area_3d.gd" id="1_8qb4v"]
[ext_resource type="PackedScene" uid="uid://bgngthdrxeblg" path="res://assets/KayKit_Dungeon/table_medium.gltf" id="2_72ykd"]
[ext_resource type="PackedScene" uid="uid://ctoanxjg4nxn3" path="res://src/coop/action_icon.tscn" id="2_d3olx"]
[ext_resource type="PackedScene" uid="uid://bh085bw7niar2" path="res://src/coop/item_nodes.tscn" id="5_cp404"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2jmb1"]
size = Vector3(2.36719, 1.5, 2.39355)

[sub_resource type="BoxShape3D" id="BoxShape3D_e53ie"]
size = Vector3(2, 1.01123, 2)

[node name="PrepArea" type="Area3D" node_paths=PackedStringArray("type_label", "item_node", "icon", "label_3d") groups=["moveable"]]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_8qb4v")
type_label = NodePath("TypeLabel")
item_node = NodePath("ItemNodes")
icon = NodePath("ActionIcon")
label_3d = NodePath("Label3D")

[node name="table_medium2" parent="." instance=ExtResource("2_72ykd")]

[node name="ItemNodes" parent="." instance=ExtResource("5_cp404")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="ActionIcon" parent="." instance=ExtResource("2_d3olx")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("BoxShape3D_2jmb1")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.66298, 0)
billboard = 1
text = "Test"

[node name="TypeLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.51782, 0)
billboard = 1
text = "Test"

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.494385, 0)
shape = SubResource("BoxShape3D_e53ie")
